--- a/app/src/main/res/layout/producto_card_view.xml
+++ b/app/src/main/res/layout/producto_card_view.xml
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
-                android:layout_alignBottom="@+id/tv_producto_name"
+                android:layout_below="@+id/tv_producto_name"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true" />
 
@@ -51,7 +51,7 @@
                 android:stepSize="0.01"
                 android:max="5"
                 android:isIndicator="true"
-                android:layout_below="@+id/tv_producto_name"
+                android:layout_below="@+id/tv_producto_price"
                 android:layout_alignLeft="@+id/tv_producto_name"
                 android:layout_alignStart="@+id/tv_producto_name" />
 
